--- a/style1.css
+++ b/style1.css
@@ -88,7 +88,7 @@
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
-    padding: 50px 0;
+    height:auto;
   }
 
   .footer .footer-column {
@@ -115,5 +115,6 @@
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
+    height:auto;
 
   }
