--- a/style1.css
+++ b/style1.css
@@ -27,7 +27,7 @@
   .testimonial-item {
     text-align: center;
     padding: 50px 0;
-    color: #333;
+    color:white;
   }
 
   .testimonial-item p {
